[package]
name = "tv-ems"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Election definition authoring, ballot design, and precinct management."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
