[package]
name = "tv-update-station"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Install signed updates to devices (maintenance ceremony)."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
