[package]
name = "tv-admin"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Admin console: open/close polls, device status, export trigger."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
