[package]
name = "tv-audit-log"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Append-only, hash-chained audit log with signed checkpoints."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
