[package]
name = "tv-scanner"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Optical scan pipeline: image capture and mark interpretation."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
