[package]
name = "tv-tabulate"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Tabulation engine: contest rules and Cast Vote Record (CVR) creation."
repository = "https://github.com/acenji/trustvoting"
publish = false

[dependencies]
tv-formats = { path = "../../shared/tv-formats" }
